--- a/src/templates/actor/parts/general/parts/advantages.hbs
+++ b/src/templates/actor/parts/general/parts/advantages.hbs
@@ -12,7 +12,7 @@
     {{#each system.general.advantages as |advantage|}}
       <div data-item-id='{{advantage._id}}' class='advantage-row'>
         <input
-          name='data.dynamic.advantages.{{advantage._id}}.name'
+          name='system.dynamic.advantages.{{advantage._id}}.name'
           type='text'
           class='input'
           value='{{advantage.name}}'
