--- a/src/templates/actor/parts/general/parts/elan.hbs
+++ b/src/templates/actor/parts/general/parts/elan.hbs
@@ -17,14 +17,14 @@
             class="name"
             title=(localize 'anima.ui.elanSection.elanRow.name')
             inputType="text"
-            inputName=(concat "data.dynamic.elan." elan._id ".name")
+            inputName=(concat "system.dynamic.elan." elan._id ".name")
             inputValue=elan.name
           }}
           {{>
           "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
             class="level"
             title=(localize 'anima.ui.elanSection.elanRow.level')
-            inputName=(concat "data.dynamic.elan." elan._id ".data.level.value")
+            inputName=(concat "system.dynamic.elan." elan._id ".system.level.value")
             inputValue=elan.system.level.value
           }}
         </div>
@@ -37,7 +37,7 @@
           >
             <input
               type='hidden'
-              name='data.dynamic.elan_power.{{power._id}}.data.elanId'
+              name='system.dynamic.elan_power.{{power._id}}.system.elanId'
               value='{{elan._id}}'
             />
             {{>
@@ -45,7 +45,7 @@
               class="elan-power-name"
               hideTitle=true
               inputType="text"
-              inputName=(concat "data.dynamic.elan_power." power._id ".name")
+              inputName=(concat "system.dynamic.elan_power." power._id ".name")
               inputValue=power.name
             }}
             {{>
@@ -53,7 +53,7 @@
               class="elan-power-level"
               hideTitle=true
               inputType="text"
-              inputName=(concat "data.dynamic.elan_power." power._id ".data.level.value")
+              inputName=(concat "system.dynamic.elan_power." power._id ".system.level.value")
               inputValue=power.system.level.value
             }}
           </div>
