--- a/src/templates/actor/parts/general/parts/language.hbs
+++ b/src/templates/actor/parts/general/parts/language.hbs
@@ -34,7 +34,7 @@
           class="name"
           hideTitle=true
           inputType="text"
-          inputName=(concat "data.dynamic.languages." language._id ".name")
+          inputName=(concat "system.dynamic.languages." language._id ".name")
           inputValue=language.name
         }}
       </div>
