--- a/src/templates/actor/parts/mystic/parts/spells/spells.hbs
+++ b/src/templates/actor/parts/mystic/parts/spells/spells.hbs
@@ -24,7 +24,7 @@
                   class="name"
                   hideTitle=true
                   inputType="text"
-                  inputName=(concat "data.dynamic.spells." spell._id ".name")
+                  inputName=(concat "system.dynamic.spells." spell._id ".name")
                   inputValue=spell.name
                 }}
               </div>
@@ -33,7 +33,7 @@
                 "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
                   class="level"
                   title=(localize "anima.ui.mystic.spell.level.title")
-                  inputName=(concat "data.dynamic.spells." spell._id ".data.level.value")
+                  inputName=(concat "system.dynamic.spells." spell._id ".system.level.value")
                   inputValue=spell.system.level.value
                 }}
                 {{>
@@ -41,7 +41,7 @@
                   class="via"
                   choices=xRoot.config.iterables.mystic.vias
                   title=(localize "anima.ui.mystic.spell.via.title")
-                  inputName=(concat "data.dynamic.spells." spell._id ".data.via.value")
+                  inputName=(concat "system.dynamic.spells." spell._id ".system.via.value")
                   inputValue=spell.system.via.value
                 }}
               </div>
@@ -54,10 +54,10 @@
             "systems/animabf/templates/actor/parts/mystic/parts/spells/grade/grade.hbs"
               class="base-grade"
               spellId=spell._id
-              intRequiredInputName=(concat "data.dynamic.spells." spell._id ".data.grades.base.intRequired.value")
-              zeonInputName=(concat "data.dynamic.spells." spell._id ".data.grades.base.zeon.value")
-              maintenanceCostInputName=(concat "data.dynamic.spells." spell._id ".data.grades.base.maintenanceCost.value")
-              descriptionInputName=(concat "data.dynamic.spells." spell._id ".data.grades.base.description.value")
+              intRequiredInputName=(concat "system.dynamic.spells." spell._id ".system.grades.base.intRequired.value")
+              zeonInputName=(concat "system.dynamic.spells." spell._id ".system.grades.base.zeon.value")
+              maintenanceCostInputName=(concat "system.dynamic.spells." spell._id ".system.grades.base.maintenanceCost.value")
+              descriptionInputName=(concat "system.dynamic.spells." spell._id ".system.grades.base.description.value")
               gradeName='base'
               grade=spell.system.grades.base
             }}
@@ -66,10 +66,10 @@
               class="intermediate-grade"
               spellId=spell._id
               hideTitle=true
-              intRequiredInputName=(concat "data.dynamic.spells." spell._id ".data.grades.intermediate.intRequired.value")
-              zeonInputName=(concat "data.dynamic.spells." spell._id ".data.grades.intermediate.zeon.value")
-              maintenanceCostInputName=(concat "data.dynamic.spells." spell._id ".data.grades.intermediate.maintenanceCost.value")
-              descriptionInputName=(concat "data.dynamic.spells." spell._id ".data.grades.intermediate.description.value")
+              intRequiredInputName=(concat "system.dynamic.spells." spell._id ".system.grades.intermediate.intRequired.value")
+              zeonInputName=(concat "system.dynamic.spells." spell._id ".system.grades.intermediate.zeon.value")
+              maintenanceCostInputName=(concat "system.dynamic.spells." spell._id ".system.grades.intermediate.maintenanceCost.value")
+              descriptionInputName=(concat "system.dynamic.spells." spell._id ".system.grades.intermediate.description.value")
               gradeName='intermediate'
               grade=spell.system.grades.intermediate
             }}
@@ -78,10 +78,10 @@
               class="advanced-grade"
               spellId=spell._id
               hideTitle=true
-              intRequiredInputName=(concat "data.dynamic.spells." spell._id ".data.grades.advanced.intRequired.value")
-              zeonInputName=(concat "data.dynamic.spells." spell._id ".data.grades.advanced.zeon.value")
-              maintenanceCostInputName=(concat "data.dynamic.spells." spell._id ".data.grades.advanced.maintenanceCost.value")
-              descriptionInputName=(concat "data.dynamic.spells." spell._id ".data.grades.advanced.description.value")
+              intRequiredInputName=(concat "system.dynamic.spells." spell._id ".system.grades.advanced.intRequired.value")
+              zeonInputName=(concat "system.dynamic.spells." spell._id ".system.grades.advanced.zeon.value")
+              maintenanceCostInputName=(concat "system.dynamic.spells." spell._id ".system.grades.advanced.maintenanceCost.value")
+              descriptionInputName=(concat "system.dynamic.spells." spell._id ".system.grades.advanced.description.value")
               gradeName='advanced'
               grade=spell.system.grades.advanced
             }}
@@ -90,10 +90,10 @@
               class="arcane-grade"
               spellId=spell._id
               hideTitle=true
-              intRequiredInputName=(concat "data.dynamic.spells." spell._id ".data.grades.arcane.intRequired.value")
-              zeonInputName=(concat "data.dynamic.spells." spell._id ".data.grades.arcane.zeon.value")
-              maintenanceCostInputName=(concat "data.dynamic.spells." spell._id ".data.grades.arcane.maintenanceCost.value")
-              descriptionInputName=(concat "data.dynamic.spells." spell._id ".data.grades.arcane.description.value")
+              intRequiredInputName=(concat "system.dynamic.spells." spell._id ".system.grades.arcane.intRequired.value")
+              zeonInputName=(concat "system.dynamic.spells." spell._id ".system.grades.arcane.zeon.value")
+              maintenanceCostInputName=(concat "system.dynamic.spells." spell._id ".system.grades.arcane.maintenanceCost.value")
+              descriptionInputName=(concat "system.dynamic.spells." spell._id ".system.grades.arcane.description.value")
               gradeName='arcane'
               grade=spell.system.grades.arcane
             }}
@@ -105,7 +105,7 @@
                 class="spell-type"
                 choices=xRoot.config.iterables.mystic.spellTypes
                 title=(localize "anima.ui.mystic.spell.spellType.title")
-                inputName=(concat "data.dynamic.spells." spell._id ".data.spellType.value")
+                inputName=(concat "system.dynamic.spells." spell._id ".system.spellType.value")
                 inputValue=spell.system.spellType.value
               }}
               {{>
@@ -113,7 +113,7 @@
                 class="action-type"
                 choices=xRoot.config.iterables.mystic.actionTypes
                 title=(localize "anima.ui.mystic.spell.actionType.title")
-                inputName=(concat "data.dynamic.spells." spell._id ".data.actionType.value")
+                inputName=(concat "system.dynamic.spells." spell._id ".system.actionType.value")
                 inputValue=spell.system.actionType.value
               }}
               {{>
@@ -121,7 +121,7 @@
                 class="has-daily-maintenance"
                 title=(localize "anima.ui.mystic.spell.hasDailyMaintenance.title")
                 inputType="checkbox"
-                inputName=(concat "data.dynamic.spells." spell._id ".data.hasDailyMaintenance.value")
+                inputName=(concat "system.dynamic.spells." spell._id ".system.hasDailyMaintenance.value")
                 inputValue=(is 'eq' spell.system.hasDailyMaintenance.value true)
               }}
             </div>
