--- a/src/templates/actor/parts/mystic/parts/spheres.hbs
+++ b/src/templates/actor/parts/mystic/parts/spheres.hbs
@@ -6,7 +6,7 @@
       <p class='label sphere-name'>
         {{localize "anima.ui.mystic.magicLevel.spheres.essence.title"}}
       </p>
-      <input name='data.mystic.magicLevel.spheres.essence.value' class='sphere-value' type='number' value='{{system.mystic.magicLevel.spheres.essence.value}}'/>
+      <input name='system.mystic.magicLevel.spheres.essence.value' class='sphere-value' type='number' value='{{system.mystic.magicLevel.spheres.essence.value}}'/>
     </div>
     <div class='water-sphere sphere'>
       <p class='label sphere-name'>
