--- a/src/templates/actor/parts/psychic/parts/psychic-powers.hbs
+++ b/src/templates/actor/parts/psychic/parts/psychic-powers.hbs
@@ -24,7 +24,7 @@
                   class="name"
                   hideTitle=true
                   inputType="text"
-                  inputName=(concat "data.dynamic.psychicPowers." power._id ".name")
+                  inputName=(concat "system.dynamic.psychicPowers." power._id ".name")
                   inputValue=power.name
                 }}
               </div>
@@ -34,7 +34,7 @@
                   class="level"
                   title=(localize "anima.ui.psychic.psychicPowers.power.header.level.title")
                   inputType="text"
-                  inputName=(concat "data.dynamic.psychicPowers." power._id ".data.level.value")
+                  inputName=(concat "system.dynamic.psychicPowers." power._id ".system.level.value")
                   inputValue=power.system.level.value
                 }}
                 {{>
@@ -42,7 +42,7 @@
                   class="action-type"
                   choices=xRoot.config.iterables.psychic.actionTypes
                   title=(localize "anima.ui.psychic.psychicPowers.power.footer.actionType.title")
-                  inputName=(concat "data.dynamic.psychicPowers." power._id ".data.actionType.value")
+                  inputName=(concat "system.dynamic.psychicPowers." power._id ".system.actionType.value")
                   inputValue=power.system.actionType.value
                 }}
               </div>
@@ -62,7 +62,7 @@
                 <input
                   type='text'
                   class='input description'
-                  name='{{concat "data.dynamic.psychicPowers." power._id ".data.effects." key ".value"}}'
+                  name='{{concat "system.dynamic.psychicPowers." power._id ".system.effects." key ".value"}}'
                   value='{{effect.value}}'
                 />
               </div>
@@ -75,14 +75,14 @@
                 class="has-maintenance"
                 title=(localize "anima.ui.psychic.psychicPowers.power.footer.hasMaintenance.title")
                 inputType="checkbox"
-                inputName=(concat "data.dynamic.psychicPowers." power._id ".data.hasMaintenance.value")
+                inputName=(concat "system.dynamic.psychicPowers." power._id ".system.hasMaintenance.value")
                 inputValue=(is 'eq' power.system.hasMaintenance.value true)
               }}
               {{>
               "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
                 class="bonus"
                 title=(localize "anima.ui.psychic.psychicPowers.power.footer.bonus.title")
-                inputName=(concat "data.dynamic.psychicPowers." power._id ".data.bonus.value")
+                inputName=(concat "system.dynamic.psychicPowers." power._id ".system.bonus.value")
                 inputValue=power.system.bonus.value
               }}
             </div>
