--- a/src/templates/actor/parts/secondaries/parts/secondary-special-skills.hbs
+++ b/src/templates/actor/parts/secondaries/parts/secondary-special-skills.hbs
@@ -16,7 +16,7 @@
           class="level"
           rollable=true
           title=this.name
-          inputName=(concat "data.dynamic.secondarySpecialSkills." this._id ".data.level.value")
+          inputName=(concat "system.dynamic.secondarySpecialSkills." this._id ".system.level.value")
           inputValue=this.system.level.value
         }}
       </div>
