--- a/src/templates/actor/parts/combat/parts/combat-tables.hbs
+++ b/src/templates/actor/parts/combat/parts/combat-tables.hbs
@@ -12,7 +12,7 @@
     {{#each system.combat.combatTables as |combatTable|}}
       <div data-item-id='{{combatTable._id}}' class='combat-table-row'>
         <input
-          name='data.dynamic.combatTables.{{combatTable._id}}.name'
+          name='system.dynamic.combatTables.{{combatTable._id}}.name'
           type='text'
           class='input'
           value='{{combatTable.name}}'
