--- a/src/templates/actor/parts/domine/parts/ars-magnus.hbs
+++ b/src/templates/actor/parts/domine/parts/ars-magnus.hbs
@@ -12,7 +12,7 @@
     {{#each system.domine.arsMagnus as |arsMagnus|}}
       <div data-item-id='{{arsMagnus._id}}' class='ars-magnus-row'>
         <input
-          name='data.dynamic.arsMagnus.{{arsMagnus._id}}.name'
+          name='system.dynamic.arsMagnus.{{arsMagnus._id}}.name'
           type='text'
           class='input'
           value='{{arsMagnus.name}}'
