--- a/src/templates/actor/parts/domine/parts/ki-skills.hbs
+++ b/src/templates/actor/parts/domine/parts/ki-skills.hbs
@@ -12,7 +12,7 @@
     {{#each system.domine.kiSkills as |kiSkill|}}
       <div data-item-id='{{kiSkill._id}}' class='ki-skill-row'>
         <input
-          name='data.dynamic.kiSkills.{{kiSkill._id}}.name'
+          name='system.dynamic.kiSkills.{{kiSkill._id}}.name'
           type='text'
           class='input'
           value='{{kiSkill.name}}'
