--- a/src/templates/actor/parts/domine/parts/special-skills-tables.hbs
+++ b/src/templates/actor/parts/domine/parts/special-skills-tables.hbs
@@ -12,7 +12,7 @@
     {{#each system.domine.specialSkills as |specialSkill|}}
       <div data-item-id='{{specialSkill._id}}' class='special-skill-row'>
         <input
-          name='data.dynamic.specialSkills.{{specialSkill._id}}.name'
+          name='system.dynamic.specialSkills.{{specialSkill._id}}.name'
           type='text'
           class='input'
           value='{{specialSkill.name}}'
