--- a/src/templates/actor/parts/domine/parts/techniques.hbs
+++ b/src/templates/actor/parts/domine/parts/techniques.hbs
@@ -23,7 +23,7 @@
                 class="name"
                 title=(localize "anima.ui.domine.techniques.technique.header.name.title")
                 inputType="text"
-                inputName=(concat "data.dynamic.techniques." technique._id ".name")
+                inputName=(concat "system.dynamic.techniques." technique._id ".name")
                 inputValue=technique.name
               }}
             </div>
@@ -31,7 +31,7 @@
           {{#> "systems/animabf/templates/common/ui/group-body.hbs"
             class="technique"
           }}
-            {{editor technique.system.enrichedDescription target=(concat "data.dynamic.techniques." technique._id ".data.description.value") button=true owner=true editable=true}}
+            {{editor technique.system.enrichedDescription target=(concat "system.dynamic.techniques." technique._id ".system.description.value") button=true owner=true editable=true}}
           {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
           {{#> "systems/animabf/templates/common/ui/group-footer.hbs"}}
             <div class='technique-footer'>
@@ -40,7 +40,7 @@
                 class="level"
                 title=(localize "anima.ui.domine.techniques.technique.footer.level.title")
                 inputType='text'
-                inputName=(concat "data.dynamic.techniques." technique._id ".data.level.value")
+                inputName=(concat "system.dynamic.techniques." technique._id ".system.level.value")
                 inputValue=technique.system.level.value
               }}
               {{>
@@ -48,7 +48,7 @@
                 class="strength"
                 title=(localize "anima.ui.domine.techniques.technique.footer.strength.title")
                 inputType='text'
-                inputName=(concat "data.dynamic.techniques." technique._id ".data.strength.value")
+                inputName=(concat "system.dynamic.techniques." technique._id ".system.strength.value")
                 inputValue=technique.system.strength.value
               }}
               {{>
@@ -56,7 +56,7 @@
                 class="agility"
                 title=(localize "anima.ui.domine.techniques.technique.footer.agility.title")
                 inputType='text'
-                inputName=(concat "data.dynamic.techniques." technique._id ".data.agility.value")
+                inputName=(concat "system.dynamic.techniques." technique._id ".system.agility.value")
                 inputValue=technique.system.agility.value
               }}
               {{>
@@ -64,7 +64,7 @@
                 class="dexterity"
                 title=(localize "anima.ui.domine.techniques.technique.footer.dexterity.title")
                 inputType='text'
-                inputName=(concat "data.dynamic.techniques." technique._id ".data.dexterity.value")
+                inputName=(concat "system.dynamic.techniques." technique._id ".system.dexterity.value")
                 inputValue=technique.system.dexterity.value
               }}
               {{>
@@ -72,7 +72,7 @@
                 class="constitution"
                 title=(localize "anima.ui.domine.techniques.technique.footer.constitution.title")
                 inputType='text'
-                inputName=(concat "data.dynamic.techniques." technique._id ".data.constitution.value")
+                inputName=(concat "system.dynamic.techniques." technique._id ".system.constitution.value")
                 inputValue=technique.system.constitution.value
               }}
               {{>
@@ -80,7 +80,7 @@
                 class="willPower"
                 title=(localize "anima.ui.domine.techniques.technique.footer.willPower.title")
                 inputType='text'
-                inputName=(concat "data.dynamic.techniques." technique._id ".data.willPower.value")
+                inputName=(concat "system.dynamic.techniques." technique._id ".system.willPower.value")
                 inputValue=technique.system.willPower.value
               }}
               {{>
@@ -88,7 +88,7 @@
                 class="power"
                 title=(localize "anima.ui.domine.techniques.technique.footer.power.title")
                 inputType='text'
-                inputName=(concat "data.dynamic.techniques." technique._id ".data.power.value")
+                inputName=(concat "system.dynamic.techniques." technique._id ".system.power.value")
                 inputValue=technique.system.power.value
               }}
               {{>
@@ -96,7 +96,7 @@
                 class="martial-knowledge"
                 title=(localize "anima.ui.domine.techniques.technique.footer.martialKnowledge.title")
                 inputType='text'
-                inputName=(concat "data.dynamic.techniques." technique._id ".data.martialKnowledge.value")
+                inputName=(concat "system.dynamic.techniques." technique._id ".system.martialKnowledge.value")
                 inputValue=technique.system.martialKnowledge.value
               }}
             </div>
