--- a/src/templates/actor/parts/general/parts/titles.hbs
+++ b/src/templates/actor/parts/general/parts/titles.hbs
@@ -12,7 +12,7 @@
     {{#each system.general.titles as |title|}}
       <div data-item-id='{{title._id}}' class='title-row'>
         <input
-          name='data.dynamic.titles.{{title._id}}.name'
+          name='system.dynamic.titles.{{title._id}}.name'
           type='text'
           class='input'
           value='{{title.name}}'
