--- a/src/templates/actor/parts/mystic/parts/metamagics.hbs
+++ b/src/templates/actor/parts/mystic/parts/metamagics.hbs
@@ -17,7 +17,7 @@
           title=(localize "anima.ui.mystic.metamagic.name.title")
           hideTitle=(is "gt" index 0)
           inputType="text"
-          inputName=(concat "data.dynamic.metamagics." metamagic._id ".name")
+          inputName=(concat "system.dynamic.metamagics." metamagic._id ".name")
           inputValue=metamagic.name
         }}
         {{>
@@ -25,7 +25,7 @@
           class="grade"
           title=(localize "anima.ui.mystic.metamagic.grade.title")
           hideTitle=(is "gt" index 0)
-          inputName=(concat "data.dynamic.metamagics." metamagic._id ".data.grade.value")
+          inputName=(concat "system.dynamic.metamagics." metamagic._id ".system.grade.value")
           inputValue=metamagic.system.grade.value
         }}
       </div>
