--- a/src/templates/actor/parts/mystic/parts/selected-spells.hbs
+++ b/src/templates/actor/parts/mystic/parts/selected-spells.hbs
@@ -17,7 +17,7 @@
           title=(localize "anima.ui.mystic.selectedSpells.name.title")
           hideTitle=(is "gt" @index 0)
           inputType="text"
-          inputName=(concat "data.dynamic.selectedSpells." this._id ".name")
+          inputName=(concat "system.dynamic.selectedSpells." this._id ".name")
           inputValue=this.name
         }}
         {{>
@@ -25,7 +25,7 @@
           class="cost"
           title=(localize "anima.ui.mystic.selectedSpells.cost.title")
           hideTitle=(is "gt" @index 0)
-          inputName=(concat "data.dynamic.selectedSpells." this._id ".data.cost.value")
+          inputName=(concat "system.dynamic.selectedSpells." this._id ".system.cost.value")
           inputValue=this.system.cost.value
         }}
       </div>
